--- a/style.css
+++ b/style.css
@@ -1,5 +1,45 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  background: #00b3e6; 
 }
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  margin: 0 auto;
+}
+nav a {
+  display: inline-block;
+  padding: 10px;
+  background-color: grey;
+  text-decoration: none;
+  color: white;
+  margin: 5px;
+}
+
+.image-caption {
+  font-size: 14px;
+  text-align: center;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: 10px auto;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background-color: lightgrey;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+#details::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
